# auto-fuel-efficiency-predictor

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
app/: app.py
configs/: config.yaml
notebooks/: EDA.ipynb
src/data/: ingestion.py  preprocessing.py
src/fuel_efficiency/utils/: exception.py  logger.py
src/models/: evaluate.py  model_registry.py  train.py
src/pipelines/: prediction_pipeline.py  training_pipeline.py
src/utils/: exception.py  helper.py  logger.py
tests/: conftest.py  test_data_ingestion.py  test_data_preprocessing.py  test_evaluate.py  test_model_registry.py  test_model_trainer.py  test_prediction_pipeline.py
