[project]
name = "auto-fuel-efficiency-predictor"
version = "0.1.0"
description = "DNN Fuel efficiency Prediction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
